hax-dev/test-harness/src/snapshots/toolchain__naming into-fstar.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Translate:
      backend: fstar
  info:
    name: naming
    manifest: naming/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: false
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0

[stdout]
diagnostics = []

[stdout.files]
"Naming.Ambiguous_names.fst" = '''
module Naming.Ambiguous_names
#set-options "--fuel 0 --ifuel 1 --z3rlimit 15"
open Core
open FStar.Mul

let debug (label value: u32) : Prims.unit =
  let args:(u32 & u32) = label, value <: (u32 & u32) in
  let args:t_Array Core.Fmt.Rt.t_Argument (mk_usize 2) =
    let list =
      [Core.Fmt.Rt.impl__new_display #u32 args._1; Core.Fmt.Rt.impl__new_display #u32 args._2]
    in
    FStar.Pervasives.assert_norm (Prims.eq2 (List.Tot.length list) 2);
    Rust_primitives.Hax.array_of_list 2 list
  in
  let _:Prims.unit =
    Std.Io.Stdio.e_print (Core.Fmt.Rt.impl_1__new_v1 (mk_usize 3)
          (mk_usize 2)
          (let list = ["["; "] a="; "\n"] in
            FStar.Pervasives.assert_norm (Prims.eq2 (List.Tot.length list) 3);
            Rust_primitives.Hax.array_of_list 3 list)
          args
        <:
        Core.Fmt.t_Arguments)
  in
  ()

/// `f` stacks mutliple let bindings declaring different `a`s.
let f (_: Prims.unit) : Prims.unit =
  let a_1_:u32 = mk_u32 104 in
  let a_2_:u32 = mk_u32 205 in
  let a_3_:u32 = mk_u32 306 in
  let a:u32 = mk_u32 123 in
  let _:Prims.unit = debug (mk_u32 3) a_3_ in
  let _:Prims.unit = debug (mk_u32 2) a_2_ in
  let _:Prims.unit = debug (mk_u32 1) a_1_ in
  debug (mk_u32 4) a

/// `f` is expanded into `f_expand` below, while the execution of `f` gives:
/// ```plaintext
///  [3] a=306
///  [2] a=205
///  [1] a=104
///  [last] a=123
/// ```
let ff_expand (_: Prims.unit) : Prims.unit =
  let a:i32 = mk_i32 104 in
  let a:i32 = mk_i32 205 in
  let a:i32 = mk_i32 306 in
  let a:u32 = mk_u32 123 in
  let _:Prims.unit = debug (mk_u32 3) a in
  let _:Prims.unit = debug (mk_u32 2) a in
  let _:Prims.unit = debug (mk_u32 1) a in
  debug (mk_u32 0) a
'''
"Naming.Functions_defined_in_trait_impls.fst" = '''
module Naming.Functions_defined_in_trait_impls
#set-options "--fuel 0 --ifuel 1 --z3rlimit 15"
open Core
open FStar.Mul

type t_A = | A : t_A

let f_eq__impl__panic_cold_explicit (_: Prims.unit) : Rust_primitives.Hax.t_Never =
  Core.Panicking.panic_explicit ()

[@@ FStar.Tactics.Typeclasses.tcinstance]
let impl: Core.Cmp.t_PartialEq t_A t_A =
  {
    f_eq_pre = (fun (self: t_A) (other: t_A) -> true);
    f_eq_post = (fun (self: t_A) (other: t_A) (out: bool) -> true);
    f_eq
    =
    fun (self: t_A) (other: t_A) ->
      Rust_primitives.Hax.never_to_any (f_eq__impl__panic_cold_explicit ()
          <:
          Rust_primitives.Hax.t_Never)
  }

type t_B = | B : t_B

let f_eq__impl_1__panic_cold_explicit (_: Prims.unit) : Rust_primitives.Hax.t_Never =
  Core.Panicking.panic_explicit ()

[@@ FStar.Tactics.Typeclasses.tcinstance]
let impl_1: Core.Cmp.t_PartialEq t_B t_B =
  {
    f_eq_pre = (fun (self: t_B) (other: t_B) -> true);
    f_eq_post = (fun (self: t_B) (other: t_B) (out: bool) -> true);
    f_eq
    =
    fun (self: t_B) (other: t_B) ->
      Rust_primitives.Hax.never_to_any (f_eq__impl_1__panic_cold_explicit ()
          <:
          Rust_primitives.Hax.t_Never)
  }
'''
"Naming.fst" = '''
module Naming
#set-options "--fuel 0 --ifuel 1 --z3rlimit 15"
open Core
open FStar.Mul

type t_Foo =
  | Foo_A : t_Foo
  | Foo_B { f_x:usize }: t_Foo

type t_Foo2 =
  | Foo2_A : t_Foo2
  | Foo2_B { f_x:usize }: t_Foo2

type t_B = | B : t_B

type t_C = { f_x:usize }

type t_X = | X : t_X

let mk_c (_: Prims.unit) : t_C =
  let _:t_Foo = Foo_B ({ f_x = mk_usize 3 }) <: t_Foo in
  let _:t_X = X <: t_X in
  { f_x = mk_usize 3 } <: t_C

let impl_Foo__f (self: t_Foo) : t_Foo = Foo_A <: t_Foo

let impl_B__f (self: t_B) : t_B = B <: t_B

type t_Foobar = { f_a:t_Foo }

let f__g (_: Prims.unit) : Prims.unit = ()

let f__g__impl_B__g (self: t_B) : usize = mk_usize 0

type f__g__impl_B__g__t_Foo =
  | C_f__g__impl_B__g__Foo_A : f__g__impl_B__g__t_Foo
  | C_f__g__impl_B__g__Foo_B { f__g__impl_B__g__f_x:usize }: f__g__impl_B__g__t_Foo

let f__g__impl_Foo__g (self: t_Foo) : usize = mk_usize 1

let f (x: t_Foobar) : usize = f__g__impl_Foo__g x.f_a

let f__g__impl_Foo__g__t_hello__h (_: Prims.unit) : Prims.unit = ()

let reserved_names (v_val v_noeq v_of: u8) : u8 = (v_val +! v_noeq <: u8) +! v_of

type t_Arity1 (v_T: Type0) = | Arity1 : v_T -> t_Arity1 v_T

class t_T1 (v_Self: Type0) = { __marker_trait_t_T1:Prims.unit }

[@@ FStar.Tactics.Typeclasses.tcinstance]
let impl_T1_for_Foo: t_T1 t_Foo = { __marker_trait_t_T1 = () }

[@@ FStar.Tactics.Typeclasses.tcinstance]
let impl_T1_for_tuple_Foo_u8: t_T1 (t_Foo & u8) = { __marker_trait_t_T1 = () }

class t_T2_for_a (v_Self: Type0) = { __marker_trait_t_T2_for_a:Prims.unit }

[@@ FStar.Tactics.Typeclasses.tcinstance]
let impl_T2_ee_for_a_for_Arity1_of_tuple_Foo_u8: t_T2_for_a (t_Arity1 (t_Foo & u8)) =
  { __marker_trait_t_T2_for_a = () }

class t_T3_ee_for_a (v_Self: Type0) = { __marker_trait_t_T3_ee_for_a:Prims.unit }

[@@ FStar.Tactics.Typeclasses.tcinstance]
let impl_T3_ee_e_for_a_for_Foo: t_T3_ee_for_a t_Foo = { __marker_trait_t_T3_ee_for_a = () }

type t_StructA = { f_a:usize }

type t_StructB = {
  f_a:usize;
  f_b:usize
}

type t_StructC = { f_a:usize }

type t_StructD = {
  f_a:usize;
  f_b:usize
}

let construct_structs (a b: usize) : Prims.unit =
  let _:t_StructA = { f_a = a } <: t_StructA in
  let _:t_StructB = { f_a = a; f_b = b } <: t_StructB in
  let _:t_StructC = { f_a = a } <: t_StructC in
  let _:t_StructD = { f_a = a; f_b = b } <: t_StructD in
  ()

let v_INHERENT_CONSTANT: usize = mk_usize 3

class t_FooTrait (v_Self: Type0) = { f_ASSOCIATED_CONSTANT:usize }

let constants
      (#v_T: Type0)
      (#[FStar.Tactics.Typeclasses.tcresolve ()] i0: t_FooTrait v_T)
      (_: Prims.unit)
    : usize =
  (f_ASSOCIATED_CONSTANT #FStar.Tactics.Typeclasses.solve <: usize) +! v_INHERENT_CONSTANT

/// From issue https://github.com/hacspec/hax/issues/839
let string_shadows (v_string n: string) : Prims.unit = ()

/// From issue https://github.com/cryspen/hax/issues/1450
let items_under_closures (_: Prims.unit) : Prims.unit =
  let _: Prims.unit -> Prims.unit =
    fun temp_0_ ->
      let _:Prims.unit = temp_0_ in
      ()
  in
  ()

let items_under_closures__anon_const_0__nested_function (_: Prims.unit) : Prims.unit = ()

type items_under_closures__anon_const_0__t_NestedStruct =
  | C_items_under_closures__anon_const_0__NestedStruct : items_under_closures__anon_const_0__t_NestedStruct

let items_under_closures__nested_function (_: Prims.unit) : Prims.unit = ()

type items_under_closures__t_NestedStruct =
  | C_items_under_closures__NestedStruct : items_under_closures__t_NestedStruct
'''
