hax-dev/test-harness/src/snapshots/toolchain__reordering into-ssprove.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Translate:
      backend: ssprove
  info:
    name: reordering
    manifest: reordering/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: false
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0

[stdout]
diagnostics = []

[stdout.files]
"Reordering.v" = '''
(* File automatically generated by Hacspec *)
Set Warnings "-notation-overridden,-ambiguous-paths".
From Crypt Require Import choice_type Package Prelude.
Import PackageNotation.
From extructures Require Import ord fset.
From mathcomp Require Import word_ssrZ word.
(* From Jasmin Require Import word. *)

From Coq Require Import ZArith.
From Coq Require Import Strings.String.
Import List.ListNotations.
Open Scope list_scope.
Open Scope Z_scope.
Open Scope bool_scope.

From Hacspec Require Import ChoiceEquality.
From Hacspec Require Import LocationUtility.
From Hacspec Require Import Hacspec_Lib_Comparable.
From Hacspec Require Import Hacspec_Lib_Pre.
From Hacspec Require Import Hacspec_Lib.

Open Scope hacspec_scope.
Import choice.Choice.Exports.

From RecordUpdate Require Import RecordUpdate.

Import RecordSetNotations.

Obligation Tactic := (* try timeout 8 *) solve_ssprove_obligations.

(*Not implemented yet? todo(item)*)

Equations no_dependency_1_ (_ : both 'unit) : both 'unit :=
  no_dependency_1_ _  :=
    ret_both (tt : 'unit) : both 'unit.
Fail Next Obligation.

Equations no_dependency_2_ (_ : both 'unit) : both 'unit :=
  no_dependency_2_ _  :=
    ret_both (tt : 'unit) : both 'unit.
Fail Next Obligation.

Definition t_Foo : choice_type :=
  ('unit ∐ 'unit).
Notation "'Foo_A_case'" := (inl tt) (at level 100).
Equations Foo_A : both t_Foo :=
  Foo_A  :=
    ret_both (inl (tt : 'unit) : t_Foo) : both t_Foo.
Fail Next Obligation.
Notation "'Foo_B_case'" := (inr tt) (at level 100).
Equations Foo_B : both t_Foo :=
  Foo_B  :=
    ret_both (inr (tt : 'unit) : t_Foo) : both t_Foo.
Fail Next Obligation.

Equations f (_ : both int32) : both t_Foo :=
  f _  :=
    Foo_A : both t_Foo.
Fail Next Obligation.

Definition t_Bar : choice_type :=
  (t_Foo).
Equations 0 (s : both t_Bar) : both t_Foo :=
  0 s  :=
    bind_both s (fun x =>
      ret_both (x : t_Foo)) : both t_Foo.
Fail Next Obligation.
Equations Build_t_Bar {0 : both t_Foo} : both (t_Bar) :=
  Build_t_Bar  :=
    bind_both 0 (fun 0 =>
      ret_both ((0) : (t_Bar))) : both (t_Bar).
Fail Next Obligation.
Notation "'Build_t_Bar' '[' x ']' '(' '0' ':=' y ')'" := (Build_t_Bar (0 := y)).

Equations g (_ : both 'unit) : both t_Bar :=
  g _  :=
    Bar (f (ret_both (32 : int32))) : both t_Bar.
Fail Next Obligation.

Equations t_Foo_cast_to_repr (x : both t_Foo) : both uint_size :=
  t_Foo_cast_to_repr x  :=
    matchb x with
    | Foo_A_case  =>
      ret_both (0 : uint_size)
    | Foo_B_case  =>
      ret_both (1 : uint_size)
    end : both uint_size.
Fail Next Obligation.
'''
"Reordering_Independent_cycles.v" = '''
(* File automatically generated by Hacspec *)
Set Warnings "-notation-overridden,-ambiguous-paths".
From Crypt Require Import choice_type Package Prelude.
Import PackageNotation.
From extructures Require Import ord fset.
From mathcomp Require Import word_ssrZ word.
(* From Jasmin Require Import word. *)

From Coq Require Import ZArith.
From Coq Require Import Strings.String.
Import List.ListNotations.
Open Scope list_scope.
Open Scope Z_scope.
Open Scope bool_scope.

From Hacspec Require Import ChoiceEquality.
From Hacspec Require Import LocationUtility.
From Hacspec Require Import Hacspec_Lib_Comparable.
From Hacspec Require Import Hacspec_Lib_Pre.
From Hacspec Require Import Hacspec_Lib.

Open Scope hacspec_scope.
Import choice.Choice.Exports.

From RecordUpdate Require Import RecordUpdate.

Import RecordSetNotations.

Obligation Tactic := (* try timeout 8 *) solve_ssprove_obligations.

(*Not implemented yet? todo(item)*)

Equations c (_ : both 'unit) : both 'unit :=
  c _  :=
    a : both 'unit.
Fail Next Obligation.

Equations a (_ : both 'unit) : both 'unit :=
  a _  :=
    c : both 'unit.
Fail Next Obligation.

Equations d (_ : both 'unit) : both 'unit :=
  d _  :=
    b : both 'unit.
Fail Next Obligation.

Equations b (_ : both 'unit) : both 'unit :=
  b _  :=
    d : both 'unit.
Fail Next Obligation.
'''
"Reordering_Mut_rec.v" = '''
(* File automatically generated by Hacspec *)
Set Warnings "-notation-overridden,-ambiguous-paths".
From Crypt Require Import choice_type Package Prelude.
Import PackageNotation.
From extructures Require Import ord fset.
From mathcomp Require Import word_ssrZ word.
(* From Jasmin Require Import word. *)

From Coq Require Import ZArith.
From Coq Require Import Strings.String.
Import List.ListNotations.
Open Scope list_scope.
Open Scope Z_scope.
Open Scope bool_scope.

From Hacspec Require Import ChoiceEquality.
From Hacspec Require Import LocationUtility.
From Hacspec Require Import Hacspec_Lib_Comparable.
From Hacspec Require Import Hacspec_Lib_Pre.
From Hacspec Require Import Hacspec_Lib.

Open Scope hacspec_scope.
Import choice.Choice.Exports.

From RecordUpdate Require Import RecordUpdate.

Import RecordSetNotations.

Obligation Tactic := (* try timeout 8 *) solve_ssprove_obligations.

(*Not implemented yet? todo(item)*)

Equations g (_ : both 'unit) : both 'unit :=
  g _  :=
    f : both 'unit.
Fail Next Obligation.

Equations f (_ : both 'unit) : both 'unit :=
  f _  :=
    g : both 'unit.
Fail Next Obligation.

Equations ff_2_ (_ : both 'unit) : both 'unit :=
  ff_2_ _  :=
    f : both 'unit.
Fail Next Obligation.
'''
